10-sample-react-app-team-b/kubernetes/httproute.yaml
# HTTPRoutes for sample-react-app-team-b.kind.local
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-react-app-team-b
  namespace: team-b
spec:
  parentRefs:
    - name: native-gateway
      namespace: default
      sectionName: https
  hostnames:
    - "sample-react-app-team-b.kind.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sample-react-app-client
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-react-app-team-b-http-redirect
  namespace: team-b
spec:
  parentRefs:
    - name: native-gateway
      namespace: default
      sectionName: http
  hostnames:
    - "sample-react-app-team-b.kind.local"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
